[gd_scene load_steps=9 format=4 uid="uid://brsnkdua17ibb"]

[ext_resource type="Script" path="res://scripts/minigames/boss_fight_minigame.gd" id="1_18bpt"]
[ext_resource type="Texture2D" uid="uid://m6o0p5v2tp7h" path="res://sprites/minigames/minigames.png" id="2_002xv"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_eabgc"]
texture = ExtResource("2_002xv")
5:0/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
1:3/0 = 0
0:4/0 = 0
4:4/0 = 0
1:5/0 = 0
0:1/0 = 0

[sub_resource type="TileSet" id="TileSet_5cb1y"]
sources/0 = SubResource("TileSetAtlasSource_eabgc")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c38vl"]
texture = ExtResource("2_002xv")
5:0/0 = 0
0:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
1:3/0 = 0
0:4/0 = 0
4:4/0 = 0
1:5/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
5:4/0 = 0
6:0/0 = 0
7:0/0 = 0
7:1/0 = 0
7:2/0 = 0
6:2/0 = 0

[sub_resource type="TileSet" id="TileSet_onmib"]
sources/0 = SubResource("TileSetAtlasSource_c38vl")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3cfw5"]
size = Vector2(48, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mvhh4"]
size = Vector2(20, 64)

[node name="boss_fight_minigame" type="Node2D"]
texture_filter = 3
script = ExtResource("1_18bpt")

[node name="background" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAIAAAAAAAEAAAAAAAMAAAAAAAEAAAAAAAQAAAAAAAEAAAAAAAUAAAAAAAEAAAABAAAAAAAAAAEAAAABAAEAAAAAAAEAAAABAAIAAAAAAAEAAAABAAMAAAAAAAEAAAABAAQAAAAAAAEAAAABAAUAAAAAAAEAAAACAAAAAAAAAAEAAAACAAEAAAAAAAEAAAACAAIAAAAAAAEAAAACAAMAAAAAAAEAAAACAAQAAAAAAAEAAAACAAUAAAAAAAEAAAADAAAAAAAAAAEAAAADAAEAAAAAAAEAAAADAAIAAAAAAAEAAAADAAMAAAAAAAEAAAADAAQAAAAAAAEAAAADAAUAAAAAAAEAAAAEAAAAAAAAAAEAAAAEAAEAAAAAAAEAAAAEAAIAAAAAAAEAAAAEAAMAAAAAAAEAAAAEAAQAAAAAAAEAAAAEAAUAAAAAAAEAAAAFAAAAAAAAAAEAAAAFAAEAAAAAAAEAAAAFAAIAAAAAAAEAAAAFAAMAAAAAAAEAAAAFAAQAAAAAAAEAAAAFAAUAAAAAAAEAAAAGAAAAAAAAAAEAAAAGAAEAAAAAAAEAAAAGAAIAAAAAAAEAAAAGAAMAAAAAAAEAAAAGAAQAAAAAAAEAAAAGAAUAAAAAAAEAAAAHAAAAAAAAAAEAAAAHAAEAAAAAAAEAAAAHAAIAAAAAAAEAAAAHAAMAAAAAAAEAAAAHAAQAAAAAAAEAAAAHAAUAAAAAAAEAAAAIAAAAAAAAAAEAAAAIAAEAAAAAAAEAAAAIAAIAAAAAAAEAAAAIAAMAAAAAAAEAAAAIAAQAAAAAAAEAAAAIAAUAAAAAAAEAAAAJAAAAAAAAAAEAAAAJAAEAAAAAAAEAAAAJAAIAAAAAAAEAAAAJAAMAAAAAAAEAAAAJAAQAAAAAAAEAAAAJAAUAAAAAAAEAAAAKAAAAAAAAAAEAAAAKAAEAAAAAAAEAAAAKAAIAAAAAAAEAAAAKAAMAAAAAAAEAAAAKAAQAAAAAAAEAAAAKAAUAAAAAAAEAAAALAAAAAAAAAAEAAAALAAEAAAAAAAEAAAALAAIAAAAAAAEAAAALAAMAAAAAAAEAAAALAAQAAAAAAAEAAAALAAUAAAAAAAEAAAAMAAAAAAAAAAEAAAAMAAEAAAAAAAEAAAAMAAIAAAAAAAEAAAAMAAMAAAAAAAEAAAAMAAQAAAAAAAEAAAAMAAUAAAAAAAEAAAANAAAAAAAAAAEAAAANAAEAAAAAAAEAAAANAAIAAAAAAAEAAAANAAMAAAAAAAEAAAANAAQAAAAAAAEAAAANAAUAAAAAAAEAAAAAAAYAAAAAAAEAAAABAAYAAAAAAAEAAAACAAYAAAAAAAEAAAADAAYAAAAAAAEAAAAEAAYAAAAAAAEAAAAFAAYAAAAAAAEAAAAGAAYAAAAAAAEAAAAHAAYAAAAAAAEAAAAIAAYAAAAAAAEAAAAJAAYAAAAAAAEAAAAKAAYAAAAAAAEAAAALAAYAAAAAAAEAAAAMAAYAAAAAAAEAAAANAAYAAAAAAAEAAAAAAP//AAAAAAEAAAABAP//AAAAAAEAAAACAP//AAAAAAEAAAADAP//AAAAAAEAAAAEAP//AAAAAAEAAAAFAP//AAAAAAEAAAAGAP//AAAAAAEAAAAHAP//AAAAAAEAAAAIAP//AAAAAAEAAAAJAP//AAAAAAEAAAAKAP//AAAAAAEAAAALAP//AAAAAAEAAAAMAP//AAAAAAEAAAANAP//AAAAAAEAAAA=")
tile_set = SubResource("TileSet_5cb1y")

[node name="arrow_group" type="Node2D" parent="."]

[node name="frontground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAEAAAAAAAQAAAAAAAIAAAAAAAQAAAAAAAMAAAAAAAQAAAAAAAQAAAAAAAQAAAAAAAAAAAAAAAEAAAAAAAUAAAAAAAEAAAANAAUAAAAAAAEAAAANAAAAAAAAAAEAAAABAAAAAAABAAMAAAACAAAAAAABAAMAAAADAAAAAAABAAMAAAAEAAAAAAABAAMAAAAFAAAAAAABAAMAAAAGAAAAAAABAAMAAAAHAAAAAAABAAMAAAAIAAAAAAABAAMAAAAJAAAAAAABAAMAAAAKAAAAAAABAAMAAAALAAAAAAABAAMAAAAMAAAAAAABAAMAAAANAAEAAAAEAAQAAAANAAIAAAAEAAQAAAANAAMAAAAEAAQAAAANAAQAAAAEAAQAAAABAAUAAAABAAUAAAACAAUAAAABAAUAAAADAAUAAAABAAUAAAAEAAUAAAABAAUAAAAFAAUAAAABAAUAAAAGAAUAAAABAAUAAAAHAAUAAAABAAUAAAAIAAUAAAABAAUAAAAJAAUAAAABAAUAAAAKAAUAAAABAAUAAAALAAUAAAABAAUAAAAMAAUAAAABAAUAAAACAAEAAAAFAAAAAAACAAQAAAAFAAIAAAAEAAQAAAAHAAIAAAAEAAEAAAAHAAAAAAACAAIAAAAFAAEAAAACAAMAAAAFAAEAAAADAAEAAAAGAAAAAAAEAAIAAAAHAAEAAAAEAAMAAAAHAAEAAAADAAQAAAAGAAIAAAA=")
tile_set = SubResource("TileSet_onmib")

[node name="positions" type="Node2D" parent="."]

[node name="pos1" type="Marker2D" parent="positions"]
position = Vector2(224, 64)

[node name="pos2" type="Marker2D" parent="positions"]
position = Vector2(224, 48)

[node name="pos3" type="Marker2D" parent="positions"]
position = Vector2(224, 32)

[node name="pos4" type="Marker2D" parent="positions"]
position = Vector2(224, 16)

[node name="press_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="press_area"]
position = Vector2(56, 48)
shape = SubResource("RectangleShape2D_3cfw5")

[node name="deth_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="deth_area"]
position = Vector2(-10, 48)
shape = SubResource("RectangleShape2D_mvhh4")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(112, 48)
zoom = Vector2(8.1, 8.1)

[connection signal="body_entered" from="press_area" to="." method="_on_press_area_body_entered"]
[connection signal="body_entered" from="deth_area" to="." method="_on_deth_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
